# Gravital-Talk

./: Cargo.toml  README.md
.github/workflows/: android.yml
android/: .gitignore  local.properties.template
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/gravitaltalk/: GravitalTalkJni.kt  MainActivity.kt  PairingActivity.kt  PairingViewModel.kt  PttViewModel.kt
android/app/src/main/res/layout/: activity_main.xml  activity_pairing.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
crates/gravital-sound/: Cargo.toml
crates/gravital-sound-core/: Cargo.toml
crates/gravital-sound-core/src/: constants.rs  crypto.rs  error.rs  header.rs  lib.rs  message.rs  session.rs
crates/gravital-sound-core/tests/: prop_decode.rs
crates/gravital-sound-transport/: Cargo.toml
crates/gravital-sound-transport/src/: congestion.rs  error.rs  fec.rs  jitter_buffer.rs  lib.rs  session.rs
crates/gravital-sound-transport/tests/: prop_fec.rs
crates/gravital-sound/tests/: net_sim.rs  stress.rs
crates/gravital-talk-cli/: Cargo.toml
crates/gravital-talk-cli/src/: main.rs
crates/gravital-talk-ffi/: cbindgen.toml
crates/gravital-talk-ffi/include/: gravital_talk.h
crates/gravital-talk-ffi/src/: jni_bridge.rs  lib.rs
crates/gravital-talk-relay/src/: config.rs  lib.rs  main.rs  observability.rs  rooms.rs  router.rs  udp.rs  ws.rs
crates/gravital-talk-transport/src/: discovery.rs  lib.rs  session.rs  stun.rs  tone.rs
crates/gravital-talk/src/: lib.rs
crates/gravital-talk/tests/: stress.rs
outputs/android/debug/: LATEST.txt
scripts/: build-android.sh
